# elastic-explorer

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  REQUIREMENTS.md  SEARCH_IMPROVEMENTS.md  UI_IMPLEMENTED.md
.claude/: settings.local.json
docs/: PROGRESS.md  REQUIREMENTS.md  SEARCH_IMPROVEMENTS.md  UI_IMPLEMENTED.md
migrations/: 001_init.sql  002_add_password_fallback.sql  003_console_history.sql  004_remove_legacy_passwords.sql
src/: main.rs
src/config/: mod.rs
src/db/: credentials.rs  mod.rs  models.rs
src/es/: api.rs  client.rs  mod.rs
src/handlers/: console.rs  dashboard.rs  endpoints.rs  indices.rs  mod.rs  nodes.rs  search.rs  shards.rs
src/models/: dashboard.rs  index.rs  mod.rs  node.rs
src/templates/: base.html  console.html  dashboard.html  endpoints.html  index_detail.html  indices.html  indices_table.html  mod.rs  node_detail.html  search.html  search_results.html  shards.html
src/utils/: browser.rs  color.rs  format.rs  mod.rs
