[package]
name = "elastic-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# HTTP client pro Elasticsearch
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Credential storage
keyring = "3"

# Encryption (fallback pokud keyring selže)
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Utility
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
